--- a/index.html
+++ b/index.html
@@ -4,10 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Developer Portfolio</title>
+    <style>
+        <!-- @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital@0;1&display=swap'); -->
+        <!-- @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,700;1,700&display=swap'); -->
+        @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,800;1,800&display=swap');
+        </style>
+    <link rel="stylesheet" href="styles/portfolio.css">
 </head>
 <body>
     <header>
-
+        <nav>
+            <h3>Ab<span class="primary-text">i</span>d</h3>
+            <ul>
+                <li><a href="">Portfolio</a></li>
+                <li><a href="">Blog</a></li>
+                <li ><button class="btn-primary">Hire Me</button></li>
+            </ul>
+        </nav>
     </header>
     <main>
 
