--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Web Developer Portfolio</title>
     <style>
         <!-- @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital@0;1&display=swap'); 
-        -->
+-->
     <!-- @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,700;1,700&display=swap'); -->
     @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,800;1,800&display=swap');
     </style>
@@ -162,8 +162,8 @@
     </main>
     <footer>
         <div class="footer-column">
-            <h3 class="section-title">Let's Connent</h3> 
-            <p class="section-description">
+            <h3 class="section-title-f">Let's Connent</h3> 
+            <p class="section-description-f">
                 Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.
             </p>
             <div class="social-links">
@@ -173,7 +173,7 @@
             </div>
         </div>
         <div class="footer-column">
-            <h3 class="section-title">Let’s Message me</h3>
+            <h3 class="section-title-f">Let’s Message me</h3>
             <form  class="contact" action="">
                 <input type="text" placeholder="Your Name">
                 <input type="email" name="" placeholder="Your Email" id="">
