--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Developer Portfolio</title>
     <style>
-        <!-- @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital@0;1&display=swap'); 
--->
-    <!-- @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,700;1,700&display=swap'); -->
+         @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital@0;1&display=swap');
+     @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,700;1,700&display=swap'); 
     @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,800;1,800&display=swap');
     </style>
     <link rel="stylesheet" href="styles/portfolio.css">
@@ -29,8 +28,9 @@
             <div class="banner-content">
                 <h3 class="banner-greeting">Hi, I am</h3>
                 <h1 class="banner-title">Md. Abidur Rahman</h1>
-                <p class="banner-description">Shot what able cold new see hold.Friendly as an betrayed formerly he.
-                    Morning because as to society behaved moments.</p>
+                <p class="banner-description">
+                    Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.
+                </p>
                 <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
                 <button class="btn-primary"><i class="fa-solid fa-phone"></i> Contact</button>
             </div>
@@ -76,25 +76,25 @@
                 <!-- .skill*4>img+skill-title+p.skill-description -->
                 <div class="skill">
                     <img src="images/icons/js.png" alt=""> <br>
-                    <skill-title><strong>Vanilla Javascript</strong></skill-title>
+                    <h3 class="skill-title"><strong>Vanilla Javascript</strong></h3> 
                     <p class="skill-description">List skill/technologies here. You can change the icon above to any of
                         the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                 </div>
                 <div class="skill">
                     <img src="images/icons/react.png" alt=""> <br>
-                    <skill-title><strong>React</strong></skill-title>
+                    <h3 class="skill-title"><strong>React</strong></h3> 
                     <p class="skill-description">List skill/technologies here. You can change the icon above to any of
                         the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                 </div>
                 <div class="skill">
                     <img src="images/icons/nodejs.png" alt=""> <br>
-                    <skill-title><strong>Nodejs</strong></skill-title>
+                    <h3 class="skill-title"><strong>Nodejs</strong></h3> 
                     <p class="skill-description">List skill/technologies here. You can change the icon above to any of
                         the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor. </p>
                 </div>
                 <div class="skill">
                     <img src="images/icons/mongo.png" alt=""> <br>
-                    <skill-title><strong>MongoDB</strong></skill-title>
+                    <h3 class="skill-title"><strong>MongoDB</strong></h3>
                     <p class="skill-description">List skill/technologies here. You can change the icon above to any of
                         the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                 </div>
