some editing has been done

--- a/index.html
+++ b/index.html
@@ -110,22 +110,22 @@
                 <div class="resume-column">
                     <h3 class="resume-column-title">My Education</h3>
                     <div class="resume-item">
-                        <h2 class="resume-item-title">Master in Computer Engineering</h2>
-                        <h3 class="resume-item-institute">Harvard University / 2015 - 2017</h3>
+                        <h2 class="resume-item-title">Bachelor in Computer Engineering</h2>
+                        <h3 class="resume-item-institute">IUBAT-International University Of Business Agriculture and Technology / 2020 - 2025</h3>
                         <p class="resume-item-description">List skill/technologies here. You can change the icon above 
                             to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                     </div>
                     <hr>
                     <div class="resume-item">
-                        <h2 class="resume-item-title">Master in Computer Engineering</h2>
-                        <h3 class="resume-item-institute">Harvard University / 2015 - 2017</h3>
+                        <h2 class="resume-item-title">HSC</h2>
+                        <h3 class="resume-item-institute">Major Genaral Mahmudul Hasan Model College / 2015 - 2019</h3>
                         <p class="resume-item-description">List skill/technologies here. You can change the icon above 
                             to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                     </div>
                     <hr>
                     <div class="resume-item">
-                        <h2 class="resume-item-title">Master in Computer Engineering</h2>
-                        <h3 class="resume-item-institute">Harvard University / 2015 - 2017</h3>
+                        <h2 class="resume-item-title">SSC</h2>
+                        <h3 class="resume-item-institute">Bindubashini Govt. Boys' High School/ 2010 - 2015</h3>
                         <p class="resume-item-description">List skill/technologies here. You can change the icon above 
                             to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                     </div>
@@ -134,27 +134,44 @@
                 <div class="resume-column">
                     <h3 class="resume-column-title">My Experience</h3>
                     <div class="resume-item">
-                        <h2 class="resume-item-title">Master in Computer Engineering</h2>
-                        <h3 class="resume-item-institute">Harvard University / 2015 - 2017</h3>
-                        <p class="resume-item-description">List skill/technologies here. You can change the icon above 
-                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        <h2 class="resume-item-title">Solutya Pvt. Ltd.</h2>
+                        <h3 class="resume-item-institute">Internship / March, 2025 - Present</h3>
+                        <p class="resume-item-description"><strong>Working on : </strong>
+                            <ul style="list-style-type: disc;">
+                                <li>HTML</li>
+                                <li>CSS</li>
+                            </ul>
+                        </p>
+                            
                     </div>
                     <hr>
                     <div class="resume-item">
-                        <h2 class="resume-item-title">Master in Computer Engineering</h2>
-                        <h3 class="resume-item-institute">Harvard University / 2015 - 2017</h3>
-                        <p class="resume-item-description">List skill/technologies here. You can change the icon above 
-                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        <h2 class="resume-item-title">SIMEC</h2>
+                        <h3 class="resume-item-institute">Internship/ November, 2023 - January, 2024</h3>
+                        <p class="resume-item-description"><strong>Skill</strong>
+                            <ul style="list-style-type: disc;">
+                              <li>Blockchain</li>
+                              <li>Smart contract</li>
+                              <li>Solidity</li>
+                              <li>Metamask</li>  
+                            </ul>                                                                       
+                        </p>
                     </div>
                     <hr>
                     <div class="resume-item">
-                        <h2 class="resume-item-title">Master in Computer Engineering</h2>
-                        <h3 class="resume-item-institute">Harvard University / 2015 - 2017</h3>
-                        <p class="resume-item-description">List skill/technologies here. You can change the icon above 
-                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        <h2 class="resume-item-title">IUBAT-International University of Business Agriculture & Technology</h2>
+                        <h3 class="resume-item-institute">Academic Mentor / 2021 - 2024</h3>
+                        <p class="resume-item-description">Taken mentoring classes on :   
+                            <ul style="list-style-type: disk;"></ul>
+                      
+                            <ul style="list-style-type: disc;">
+                              <li>Basic English</li>
+                              <li>Programming in C</li>
+                            </ul>
+                        </p>
                     </div>
                 </div>
-            </div>
+            </div><br>
             <div class="download-cv">
                 <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
             </div>
